# decoding_currently

./: Makefile  Makefile.am  Makefile.in  camera.c  camera.h  config.status  configure  configure.ac  configure.scan  decoding  decoding_encoding.c
.deps/: camera.Po  decoding-decoding_encoding.Po  decoding-v4l2uvc.Po  decoding_encoding.Po  v4l2uvc.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
